<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/animations_menu"
            app:entryValues="@array/animations_value"
            app:key="animationsMenu"
            app:summary="@string/animations_summary"
            app:title="@string/animations_title" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/bingo_menu"
            app:entryValues="@array/bingo_value"
            app:key="bingoMenu"
            app:summary="@string/bingo_summary"
            app:title="@string/bingo_effects" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="royal_horns"
            app:entries="@array/sound_menu"
            app:entryValues="@array/sound_value"
            app:key="soundMenu"
            app:summary="@string/sound_summary"
            app:title="@string/sound_title" />

    </PreferenceCategory>

</PreferenceScreen>