<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filterOp1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterOp2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/filterOp1"
        app:layout_constraintStart_toStartOf="@+id/filterOp1"
        app:layout_constraintTop_toBottomOf="@+id/filterOp1" />

    <TextView
        android:id="@+id/filterOp3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        app:layout_constraintEnd_toEndOf="@+id/filterOp2"
        app:layout_constraintStart_toStartOf="@+id/filterOp2"
        app:layout_constraintTop_toBottomOf="@+id/filterOp2" />

    <TextView
        android:id="@+id/filterOp4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/personality"
        app:layout_constraintEnd_toEndOf="@+id/filterOp3"
        app:layout_constraintStart_toStartOf="@+id/filterOp3"
        app:layout_constraintTop_toBottomOf="@+id/filterOp3" />

    <TextView
        android:id="@+id/filterOp5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        app:layout_constraintEnd_toEndOf="@+id/filterOp4"
        app:layout_constraintStart_toStartOf="@+id/filterOp4"
        app:layout_constraintTop_toBottomOf="@+id/filterOp4" />
</androidx.constraintlayout.widget.ConstraintLayout>