<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:id="@+id/bingoGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:fontFamily="@font/nunito"
            android:id="@+id/rowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/bingo_row"
            android:text="@string/bingo_row" />

        <RadioButton
            android:fontFamily="@font/nunito"
            android:id="@+id/xBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/bingo_x"
            android:text="@string/bingo_x" />

        <RadioButton
            android:fontFamily="@font/nunito"
            android:id="@+id/cornerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/bingo_corners"
            android:text="@string/bingo_corners" />

        <RadioButton
            android:fontFamily="@font/nunito"
            android:id="@+id/ringBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/bingo_ring"
            android:text="@string/bingo_ring" />

        <RadioButton
            android:fontFamily="@font/nunito"
            android:id="@+id/blackoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/bingo_blackout"
            android:text="@string/bingo_blackout" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>