<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/songDetailImg"
        android:layout_width="0dp"
        android:layout_height="@dimen/detail_img"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_house_24" />

    <TextView
        android:id="@+id/songDetailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/kk_background"
        android:fontFamily="@font/fredoka_one"
        android:paddingTop="@dimen/song_padding"
        android:paddingBottom="@dimen/song_padding"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/song_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songDetailImg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:padding="@dimen/song_padding"
            android:text="@string/song_orderable" />

        <TextView
            android:id="@+id/songOrderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/song_padding"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:padding="@dimen/song_padding"
            android:text="@string/song_collected" />

        <ImageView
            android:id="@+id/songCollectionImg"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/song_padding"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_outline_check_box_outline_blank_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/songDetailTitle">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:padding="@dimen/song_padding"
            android:text="@string/song_buy" />

        <TextView
            android:id="@+id/songBuyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:paddingStart="@dimen/song_padding"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/fredoka_one"
            android:padding="@dimen/song_padding"
            android:text="@string/song_sell" />

        <TextView
            android:id="@+id/songSellText"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:paddingStart="@dimen/song_padding"
            android:text="TextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>