<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/villager_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholderimage" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:background="#FFD8B6">

                <TextView
                    android:id="@+id/villagerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="NAME"
                    android:textSize="48sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/villagerGender"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/villagerName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/villagerName"
                    app:layout_constraintVertical_bias="0.555"
                    app:srcCompat="@drawable/ic_baseline_female_24" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/species_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/villagerName"
                    app:layout_constraintTop_toBottomOf="@+id/villagerName" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/birthday_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/villagerSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SPECIES"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="@+id/villagerGender"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/villagerCatchphrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CATCHPHRASE"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="@+id/villagerHobby"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/villagerBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BIRTHDAY"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="@+id/villagerPersonality"
                    app:layout_constraintTop_toTopOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/catchphrase_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/hobby_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/villagerHobby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HOBBY"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="@+id/villagerBirthday"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/personality_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/villagerPersonality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PERSONALITY"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="@+id/villagerSpecies"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>